tests/fixtures/invalid/in_value_type_mismatch.lby
fn main -> i64
    1 if 5 in "abc" else 0
